Change log for package SOAs

Version 1.2-1, under development

* added functions contr.Power and Spattern (details of changes not documented here)

Version 1.2, 05 August 2022

* modified function createAB and documentation in SOAs2plus_regular:
  the He, Cheng and Tang (2018) strength 2+ SOAs now
  have orthogonal columns more often, because the columns for matrix B
  are selected from all columns that are not used for A
  (instead of only the columns that were not eligible for A).
  Users who need the previous behavior for reproducing a design
  from earlier package versions can use the argument old.
* sped up the selection of columns for matrix B in case orthogonal
  columns are requested (work directly with coefficient matrix instead
  of using function length3 from package DoE.base)
* added an internal function createAB_fast for
  SOAs2plus_regular: this bypasses orthogonality requests in order
  to obtain a fast solution or to forsake orthogonality in the hope
  of improved space-filling (argument orth)

Version 1.1, 04 June 2022

* added functions guide_SOAs and guide_SOAs_from_OA
  for providing guidance about implemented SOA constructions
* various improvements of documentation, and update of references
* BcolsFromBcolllist: changed vertex attributes to FALSE and TRUE
  instead of 0 and 1, in order to avoid a warning from package igraph
* Bug fix: function OSOAs_hadamard did not work for n=8
* Bug fix: handling of s in SOAs2plus_regular had a bug
  (leading to failure for s=9, because 9 was treated as a prime).
  Now, SOAs2plus_regular, SOA2plus_regulart and createAB
  (file utilitiesCreate.R) all have the same requirements for s:
  primes up to 19, powers of 2 up to 32, powers of 3 up to 27
  (presumably, the larger numbers do not really work well,
  but are in principle possible)

Version 1.0-1, 16 December 2021

* expanded description in DESCRIPTION file, and added a reference
* changed argument F to Fhat in internal function optimize