@@ -13,6 +13,7 @@ export(SOAs)
 export(SOAs2plus_regular)
 export(SOAs_8level)
 export(Spattern)
+export(Spattern_iter)
 export(XiaoXuMDLE)
 export(contr.Power)
 export(count_nallpairs)
@@ -39,6 +40,10 @@ importFrom(combinat,permn)
 importFrom(igraph,"vertex_attr<-")
 importFrom(igraph,graph_from_edgelist)
 importFrom(igraph,max_bipartite_match)
+importFrom(iterators,nextElem)
+importFrom(itertools,hasNext)
+importFrom(itertools,ihasNext)
+importFrom(itertools,product)
 importFrom(lhs,create_galois_field)
 importFrom(stats,addmargins)
 importFrom(stats,cor)
