@@ -1,12 +1,21 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/checkStratification.R
-\name{Spattern}
-\alias{Spattern}
+% Please edit documentation in R/Spattern_iter.R, R/checkStratification.R
+\name{Spattern_iter}
+\alias{Spattern_iter}
 \alias{dim_wt_tab}
 \alias{soacheck2D}
 \alias{soacheck3D}
+\alias{Spattern}
 \title{functions to evaluate stratification properties of (O)SOAs and GSOAs}
 \usage{
+Spattern_iter(D, s, maxwt = 4, maxdim = 4, detailed = FALSE, ...)
+
+dim_wt_tab(pat, dimlim = NULL, wtlim = NULL, ...)
+
+soacheck2D(D, s = 3, el = 3, t = 3, verbose = FALSE)
+
+soacheck3D(D, s = 3, el = 3, t = 3, verbose = FALSE)
+
 Spattern(D, s, maxwt = 4, maxdim = 4, detailed = FALSE, ...)
 
 dim_wt_tab(pat, dimlim = NULL, wtlim = NULL, ...)
@@ -65,6 +74,17 @@ impossible and will not be part of the checks.}
 (confounded pair or triple projections with A2 or A3, respectively, or table of correlations)}
 }
 \value{
+\code{Spattern_iter} currently returns an object of class \code{Spattern}
+similar to that returned by \code{Spattern}; the only difference is in the attributes.
+Objects created with \code{Spattern_iter} currently do not work with \code{dim_wt_tab}.
+
+Function \code{dim_wt_tab} postprocesses an \code{Spattern} object with
+attributes \code{combis} and \code{contrib} (from a call with \code{detailed=TRUE})
+and produces a table that holds the S pattern entries
+separated by the dimension of the contributing effect column group (rows)
+and the weight of the effect column micro group (columns). The margin shows row and
+column sums (see Details section for caveats).
+
 \code{Spattern} returns an object of class \code{Spattern}
 that is a named vector with attributes:\cr
 The attribute \code{call} holds the function call
@@ -92,6 +112,9 @@ column sums (see Details section for caveats).
 and \code{dim_wt_tab} post-processes detailed output from \code{Spattern}.
 }
 \details{
+Function \code{Spattern_iter} will eventually lead to a modification of
+\code{Spattern}.
+
 Function \code{Spattern} calculates the stratification pattern or S pattern
 as proposed in Tian and Xu (2022) (under the name space-filling pattern).\cr
 Position \code{j} in the S pattern shows the imbalance when considering \code{s^j}
@@ -152,6 +175,7 @@ If \code{verbose=TRUE}, the functions print the pairs or triples that violate
 the projection requirements for 2D or 3D.
 }
 \examples{
+Spattern_iter(nullcase, s=2)
 nullcase <- matrix(0:7, nrow=8, ncol=4)
 soacheck2D(nullcase, s=2)
 soacheck3D(nullcase, s=2)
